Attempt to debug windows build failure

--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -282,7 +282,7 @@ jobs:
     - name: Pytest
       working-directory: ${{github.workspace}}
       run: |
-        python -m pytest
+        pytest
 
     - name: Store the binary wheel
       uses: actions/upload-artifact@v2
