--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -282,7 +282,7 @@ jobs:
     - name: Pytest
       working-directory: ${{github.workspace}}
       run: |
-        python -m pytest
+        pytest
 
     - name: Lint with flake8
       run: |
