--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -213,9 +213,7 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        # py_version: ["3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
-        
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
